k8-todo-app/frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project-todo
  name: k8todofrontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8todo-frontend
  template:
    metadata:
      labels:
        app: k8todo-frontend
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: shared-claim
      containers:
        - name: k8todo-frontend
          image: dareedyone/k8todo-frontend
          volumeMounts:
            - name: shared-volume
              mountPath: /usr/src/app/files
