k8-todo-app/frontend/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8todoapp-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: k8todoapp-svc
          servicePort: 1234
